--- a/src/components/features/works/style.css
+++ b/src/components/features/works/style.css
@@ -133,7 +133,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
   .projects-grid {
     grid-template-columns: 1fr;
   }
